refactor: 职业系统 JSON→Java 类重构 + 副职业系列 + UI 改进 (v0.5.4-alpha)
## 主要变更

### 1. 职业系统架构重构（JSON 驱动 → Java 类驱动）
- 删除 JsonProfession、ProfessionDefinitionLoader（datapack JSON 加载机制）
- 新增 AbstractProfession 基类 + 3 个钩子参数 record（ProfessionContext/ProfessionCombatContext/ProfessionTooltipContext）
- IProfession 接口扩展：战斗钩子(onAttack/onDamaged/onKill)、生命周期钩子(onLevelUp/onAdvance/onActivate/onDeactivate/onLogin/onRespawn)、自定义加成公式、UI 图标(getIconItem/getIconChar/getTooltip)、装备/技能声明接口(getEquipmentTypes/getGrantedSkills)
- 删除 IProfessionProvider SPI（改由 @Mod 入口直接注册）
- ProfessionManager 新增中央钩子调度（registerCombatDispatchers 注册 RPGEventBus 监听器）
- 新增轻量 ProfessionConfigLoader（仅加载全局配置）

### 2. 新建 professions 子模块（rpgcraftprofessions）
- 6 个内置主职业类：commoner/warrior/archer/berserker/marksman/apprentice
- 3 个新副职业系列：学者 → 研究员 → 博物学家（图标均为书本，暂无属性加成）
- ProfessionsMod @Mod 入口，通过 AFTER 依赖保证加载顺序

### 3. 副职业解锁机制
- profession_config.json 新增 secondary_unlock_cost（默认 50000 经验）
- ProfessionActionPacket 新增 UNLOCK_SECONDARY 动作
- ProfessionManager.canUnlockSecondary/unlockSecondary：基础副职业直接消耗经验解锁；非基础需前置满级 + 消耗经验
- 职业面板：副职业节点双击弹确认框解锁，tooltip 显示解锁条件

### 4. 客户端 UI 改进
- 职业面板节点图标改为通过 IProfession 接口动态获取（删除硬编码 NODE_ITEM_ICONS/NODE_ICONS Map）
- 节点激活标识：填充色块 → 四角 L 形角标（主职业绿色/副职业蓝色区分）
- 升级按钮加宽（PLUS_BUTTON_WIDTH=40）解决文字溢出
- 修复进阶确认框取消后职业树消失（removed() 不再清空 ProfessionStateCache）
- 角色界面不再显示副职业（避免多副职业时占用过多空间）

### 5. Bug 修复
- 修复进入世界时 ConcurrentModificationException（ProfessionData.getActiveSecondaryProfessions 返回快照拷贝）
- ProfessionData 集合 getter 性能优化：仅活跃副职业集合返回拷贝（有迭代修改场景），等级/已解锁集合保持零分配视图